--- a/UrbanDevelopmentProj/Views/Home/Index.cshtml
+++ b/UrbanDevelopmentProj/Views/Home/Index.cshtml
@@ -2,131 +2,246 @@
     ViewData["Title"] = "Home Page";
 }
 <h3>@ViewData["Message"]</h3>
-@*<div id="myCarousel" class="carousel slide" data-ride="carousel" data-interval="6000">
-        <ol class="carousel-indicators">
-            <li data-target="#myCarousel" data-slide-to="0" class="active"></li>
-            <li data-target="#myCarousel" data-slide-to="1"></li>
-            <li data-target="#myCarousel" data-slide-to="2"></li>
-        </ol>
-        <div class="carousel-inner" role="listbox">
-            <div class="item active">
-                <img src="~/images/banner1.svg" alt="ASP.NET" class="img-responsive" />
-                <div class="carousel-caption" role="option">
-                    <p>
-                        Learn how to build ASP.NET apps that can run anywhere.
-                        <a class="btn btn-default" href="https://go.microsoft.com/fwlink/?LinkID=525028&clcid=0x409">
-                            Learn More
-                        </a>
-                    </p>
-                </div>
-            </div>
-            <div class="item">
-                <img src="~/images/banner2.svg" alt="Visual Studio" class="img-responsive" />
-                <div class="carousel-caption" role="option">
-                    <p>
-                        There are powerful new features in Visual Studio for building modern web apps.
-                        <a class="btn btn-default" href="https://go.microsoft.com/fwlink/?LinkID=525030&clcid=0x409">
-                            Learn More
-                        </a>
-                    </p>
-                </div>
-            </div>
-            <div class="item">
-                <img src="~/images/banner3.svg" alt="Microsoft Azure" class="img-responsive" />
-                <div class="carousel-caption" role="option">
-                    <p>
-                        Learn how Microsoft's Azure cloud platform allows you to build, deploy, and scale web apps.
-                        <a class="btn btn-default" href="https://go.microsoft.com/fwlink/?LinkID=525027&clcid=0x409">
-                            Learn More
-                        </a>
-                    </p>
-                </div>
-            </div>
-        </div>
-        <a class="left carousel-control" href="#myCarousel" role="button" data-slide="prev">
-            <span class="glyphicon glyphicon-chevron-left" aria-hidden="true"></span>
-            <span class="sr-only">Previous</span>
-        </a>
-        <a class="right carousel-control" href="#myCarousel" role="button" data-slide="next">
-            <span class="glyphicon glyphicon-chevron-right" aria-hidden="true"></span>
-            <span class="sr-only">Next</span>
-        </a>
-    </div>*@
+<script src="https://maps.googleapis.com/maps/api/js?key=AIzaSyAUfoBd7QFrVfnTzoFlz6RaNPeAFVS6ilw"></script>
 
 <div class="row">
     <div class="col-md-10">
         <h2>Select...</h2>
-        <div class="table-bordered">
+        <div class="table">
             <table>
                 <tr>
                     <td style="width:50%">
                         <div class="dropdown">
-                            <button class="btn btn-primary dropdown-toggle" type="button" data-toggle="dropdown">
-                                Search Criteria
-                                <span class="caret"></span>
-                            </button>
-                            <ul class="dropdown-menu">
-                                <li><a href="#">Schools</a></li>
-                                <li><a href="#">Hospital</a></li>
-                                <li><a href="#">Library</a></li>
-                                <li><a href="#">Park</a></li>
-                            </ul>
+                            @*<button class="btn btn-primary dropdown-toggle" type="button" data-toggle="dropdown">
+            Search Criteria
+            <span class="caret"></span>
+        </button>*@
+                            @*<ul class="dropdown-menu">
+            <li><a href="#">Schools</a></li>
+            <li><a href="#">Hospital</a></li>
+            <li><a href="#">Library</a></li>
+            <li><a href="#">Park</a></li>
+        </ul>*@
+                           
+                            <select id="ddlLocation" class="form-control btn btn-default dropdown-toggle" style="width:400px;" onchange="jslocationChange(this.value);">
+                                <option value='0' disabled selected>Select</option>
+                                <option value='karjat'>Karjat</option>
+                                <option value='airoli'>Airoli</option>
+                            </select>
                         </div>
                     </td>
-                   
+
                     <td style="width:50%">
                         <div class="dropdown">
-                            <button class="btn btn-primary dropdown-toggle" type="button" data-toggle="dropdown">
-                                Select Area
-                                <span class="caret"></span>
-                            </button>
-                            <ul class="dropdown-menu">
-                                <li><a href="#">Airoli</a></li>
-                                <li><a href="#">Thane</a></li>
-                                <li><a href="#">Mulund</a></li>
-                                <li><a href="#">Karjat</a></li>
-                            </ul>
+                            <select id="ddlType" class="form-control btn btn-default dropdown-toggle" onmousedown="this.value='';" onchange="jsFunction(this.value);">
+                                <option value='0' disabled selected>Select</option>
+                                <option value='hospital'>Hospital</option>
+                                <option value='school'>School</option>
+                            </select>
                         </div>
                     </td>
                 </tr>
             </table>
-            
-
-           
         </div>
     </div>
 </div>
 <div class="row">
-    <div class="col-md-5">
+    <div class="col-md-4">
         <h2>Suggestions</h2>
         <div class="container-fluid">
             <div class="row">
-                <div style="background-color:lightgray;">
-                    <p>
-                        Lorem ipsum...
-                        <button type="button" class="btn btn-default" style="align-self:flex-end">@Html.ActionLink("Send Mail", "Contact", "Home")</button>
-                        
-                    </p>
-                </div>
-                
-                <div class="col-sm-9 col-md-6 col-lg-8" style="background-color:pink;">
-                    <p>Sed ut perspiciatis...</p>
+                <table id="tbody" class="table table-striped">
+                    <thead>
+                        <tr>
+                            <th scope="col">Recommendation</th>
+                            @*<th scope="col">Responsible Authority</th>
+                <th scope="col">Notify</th>*@
+                        </tr>
+                    </thead>
+                    @*<tbody>
+        <tr>
+             <th scope="row">1</th>
+             <td>Mark</td>
+             <td>Otto</td>
+             <td><button type="button" class="btn btn-default" style="align-self:flex-end">@Html.ActionLink("Send Mail", "Index", "Home")</button></td>
+         </tr>
+         <tr>
+             <th scope="row">2</th>
+             <td>Jacob</td>
+             <td>Thornton</td>
+             <td><button type="button" class="btn btn-default" style="align-self:flex-end">@Html.ActionLink("Send Mail", "Index", "Home")</button></td>
+         </tr>
+         <tr>
+             <th scope="row">3</th>
+             <td>Larry</td>
+             <td>the Bird</td>
+             <td><button type="button" class="btn btn-default" style="align-self:flex-end">@Html.ActionLink("Send Mail", "Index", "Home")</button></td>
+         </tr>
+                    </tbody>*@
+                </table>
+                <div class="col-md-5">
+                    <h2>Maps</h2>
+                    <div class="table-bordered">
+                        <div id="divmap" style="width: 100%;  height: 220px;">
+                            <div id="map_canvas" style="height: 400px; width:700px"></div>
+                        </div>
+                    </div>
                 </div>
             </div>
         </div>
-    </div>
-    <div class="col-md-5">
-        <h2>Maps</h2>
-        <div class="table-bordered">
-            <div id="divmap" style="width: 100%;  height: 220px;">
-                <div id="map_canvas" style="height: 100%;"></div>
-            </div>
-        </div>
+        
     </div>
 </div>
 @section scripts {
     <section class="scripts">
 
+        <script type="text/javascript">
+
+    @*<!-- This code tells the browser to execute the "Initialize" method only when the complete document model has been loaded. -->*@
+            $(document).ready(function () {
+                Initialize();
+            });
+
+
+            function Initialize() {
+                google.maps.visualRefresh = true;
+                //var centerMap = new google.maps.LatLng(18.9108, 73.3305);
+                var centerMap = new google.maps.LatLng(19.7515, 75.7139);
+
+                var mapOptions = {
+                    zoom: 6,
+                    center: centerMap,
+                    mapTypeId: google.maps.MapTypeId.ROADMAP
+                };
+
+                var map = new google.maps.Map(document.getElementById("map_canvas"), mapOptions);
+            }
+
+            function jslocationChange(value) {
+                var e = document.getElementById("ddlType");
+                var strType = e.options[e.selectedIndex].value;
+                if (strType != 0)
+                {
+                    document.getElementById("ddlType").value = "0";
+                    Initialize();
+                }
+
+            }
+
+
+            function jsFunction(value) {
+               
+                var e = document.getElementById("ddlLocation");
+                var strLocation = e.options[e.selectedIndex].value;
+                var tbody = document.getElementById('tbody');
+
+                if (strLocation == "0")
+                {
+                    alert("Please select location!");
+                    return false;
+                }
+
+                var obj = { city: strLocation, searchType: value };
+
+                var jsonData = JSON.stringify(obj);
+
+                
+                alert("city: "+ strLocation + " searchType: "+ value);
+                $.ajax({
+                    type: "POST",
+                    url: "/Home/getschoolincity",
+                    data: { json: jsonData },
+                    datatype: "text",
+                    success: function (data) {
+
+                        if (data != null) {
+                            city = JSON.parse(data.citylonglat);
+                            alert(city.split(","));
+                            var citycordinates = city.split(",");
+
+                            var schooldetails = JSON.parse(data.schooldetails);
+                            var suggestions = JSON.parse(data.suggestions);
+
+                           // alert(suggestions[0].jsonData);
+                            //alert(suggestions[0].suggestions);
+                           // alert(suggestions[0].value.toString());
+                            //alert(obj[suggestions[0]].value.toString());
+                            if (schooldetails != null)
+                            {
+                                
+
+                                google.maps.visualRefresh = true;
+                                var centerMap = new google.maps.LatLng(citycordinates[0], citycordinates[1]);
+
+                                var mapOptions = {
+                                    zoom: 15,
+                                    center: centerMap,
+                                    mapTypeId: google.maps.MapTypeId.ROADMAP
+                                };
+
+                                // This makes the div with id "map_canvas" a google map
+                                map = new google.maps.Map(document.getElementById("map_canvas"), mapOptions);
+                                var image = 'http://maps.google.com/mapfiles/ms/icons/blue-dot.png';
+
+                                $.each(schooldetails, function (i, item) {
+                                    var marker = new google.maps.Marker({
+                                        'position': new google.maps.LatLng(item.lat, item.lng),
+                                        'map': map,
+                                        'title': item.name,
+                                        'icon': image
+                                    });
+
+
+                                    // Make the marker-pin blue!
+                                    //marker.setIcon('http://maps.google.com/mapfiles/ms/icons/blue-dot.png')
+
+                                    // put in some information about each json object - in this case, the opening hours.
+                                    var infowindow = new google.maps.InfoWindow({
+                                        content: "<div class='infoDiv'><h2>" + item.name + "</div></div>"
+                                    });
+
+                                    // finally hook up an "OnClick" listener to the map so it pops up out info-window when the marker-pin is clicked!
+                                    google.maps.event.addListener(marker, 'click', function () {
+                                        infowindow.open(map, marker);
+                                    });
+                                })
+                               
+                                $.each(suggestions, function (i, item) {
+                                    var tr = "<tr scope=\"row\">";
+                                    alert(item);
+                                    //if (obj[item].value.toString().substring(obj[item].value.toString().indexOf('.'), obj[item].value.toString().length) < 2)
+                                    //    obj[item].value += "0";
+                                    /* Must not forget the $ sign */
+                                    tr += "<td>" + item + "</td></tr>";
+
+                                    /* We add the table row to the table body */
+                                    tbody.innerHTML += tr;
+                                    alert(tbody.innerHTML);
+                                })
+                                //for (var item in suggestions) {
+                                    
+                                //    var tr = "<tr>";
+                                //    alert(item.value);
+                                //    //if (obj[item].value.toString().substring(obj[item].value.toString().indexOf('.'), obj[item].value.toString().length) < 2)
+                                //    //    obj[item].value += "0";
+                                //    /* Must not forget the $ sign */
+                                //    tr += "<td>" + item.value + "</td></tr>";
+
+                                //    /* We add the table row to the table body */
+                                //    tbody.innerHTML += tr;
+                                //    alert(tbody.innerHTML);
+                                //}
+                                
+                            }
+                        }}
+                })
+            }
+
+
+        </script>
+
 
     </section>
-    }
+
+
+}
